# pyfuse3

./: RELEASE.md  pyproject.toml
.github/workflows/: build-and-publish.yml  release.yml  test.yml
scripts/: release.py
test/: test_examples.py
