[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
packages = ["pyfuse3"]
modules = ["_pyfuse3", "pyfuse3_asyncio"]
namespace_packages = false
strict = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"

before-build = [
    "pip install setuptools cython",
    "python setup.py build_cython"
]

test-requires = ["pytest", "pytest-trio", "trio"]
test-command = "python -c \"import pyfuse3; print('pyfuse3 imported successfully')\""

[tool.cibuildwheel.linux]
# Use dnf/microdnf for newer CentOS/RHEL, fallback to yum for older systems
before-all = [
    "bash -c 'if command -v microdnf >/dev/null 2>&1; then microdnf install -y fuse3-devel pkgconf-pkg-config; elif command -v dnf >/dev/null 2>&1; then dnf install -y fuse3-devel pkgconf-pkg-config; elif command -v yum >/dev/null 2>&1; then yum install -y fuse3-devel pkgconfig; elif command -v apt-get >/dev/null 2>&1; then apt-get update && apt-get install -y libfuse3-dev pkg-config; else echo \"No supported package manager found\" && exit 1; fi'"
]
environment = { PKG_CONFIG_PATH = "/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig" }

[tool.cibuildwheel.macos]
before-all = ["brew install macfuse pkg-config"]
environment = { PKG_CONFIG_PATH = "/usr/local/lib/pkgconfig:/opt/homebrew/lib/pkgconfig" }